[package]
edition = "2021"
name = "strip-flow-types"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = ["napi4"] }
napi-derive = "2.11.0"
tree-sitter = "0.20.9"

[build-dependencies]
napi-build = "2.0.1"
cc="*"

[profile.release]
lto = true
